Chaning the way figures are diplayed. Issues in overfull boxes for captions and legends. Issues in placements. Issues in centering the text.

--- a/chapter_tmcomposition.tex
+++ b/chapter_tmcomposition.tex
@@ -29,7 +29,7 @@ It remains unclear exactly why and how exactly the positive charge determines to
 
 The recent accumulation of \gls{tmp} sequences and structures allowed revisiting the problem of charged residue distribution in \gls{tmh}s (see also \texttt{http://blanco.biomol.uci.edu/mpstruc/}). For example, whilst \(\beta\)--sheets contain charged residues in the \gls{tm} region, α-helices generally do not (38). Large-scale sequence analysis of \gls{tmh} from various organelle membrane surfaces in eukaryotic proteomes confirm the clustering of positive charge having a statistical bias for the cytosolic side of the membrane. At the same time, there are many \gls{tmh} exception examples to the positive-inside rule; however as a trend, topology can be determined by simply looking for the most positive loop region between helices~\cite{Sharpe2010, Baeza-Delgado2013}.
 
-When the observation of positively charged residues preferentially localised at the cytoplasmic edge of \gls{tmh}s emerged, it was also asked whether negatively charged residues work in concert with \gls{tmh} orientation. It was shown that a single additional lysine residue can reverse the topology of a model \textit{Escherichia coli} protein, whereas a much higher number of negatively charged residues is needed to achieve the same~\cite{Nillsson1990}; nevertheless, a sufficiently large negative charge can overturn the positive-inside rule~\cite{Andersson1993, Kim1994} and, thus indeed, negative residues are topologically active to a point. Negatively charged residues were observed in the flanks of \gls{tmh}s~\cite{Baeza-Delgado2013}, especially of marginally hydrophobic \gls{tm} regions~\cite{Delgado-Partin1998}. It is known that the negatively charged acidic residues in \gls{tm} regions have a non-trivial role in the biological context. In \textit{E. coli}, negative residues experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant during the electrostatic interactions of insertion~\cite{Ismail2012, Ismail2015}.
+When the observation of positively charged residues preferentially localised at the cytoplasmic edge of \gls{tmh}s emerged, it was also asked whether negatively charged residues work in concert with \gls{tmh} orientation. It was shown that a single additional lysine residue can reverse the topology of a model \textit{Escherichia coli} protein, whereas a much higher number of negatively charged residues is needed to achieve the same~\cite{Nilsson1990}; nevertheless, a sufficiently large negative charge can overturn the positive-inside rule~\cite{Andersson1993, Kim1994} and, thus indeed, negative residues are topologically active to a point. Negatively charged residues were observed in the flanks of \gls{tmh}s~\cite{Baeza-Delgado2013}, especially of marginally hydrophobic \gls{tm} regions~\cite{Delgado-Partin1998}. It is known that the negatively charged acidic residues in \gls{tm} regions have a non-trivial role in the biological context. In \textit{E. coli}, negative residues experience electrical pulling forces when travelling through the SecYEG translocon indicating that negative charges are biologically relevant during the electrostatic interactions of insertion~\cite{Ismail2012, Ismail2015}.
 
 Unfortunately, there is a problem with statistical evidence for preferential negative charge occurrence next to \gls{tmh} regions. Early investigations indicated overall both positive and negative charge were influential topology factors, dubbed the charge balance rule. If true, one would also expect to see a skew in the negative charge distribution if a cooperation between oppositely charged residues orientated a \gls{tmh}~\cite{Sipos1993, Hartmann1989}. It might be expected that, if positive residues force the loop or tail to stay inside, negative residues would be drawn outside and topology would be determined not unlike electrophoresis. Yet, there is plenty of individual protein examples but no conclusive statistical evidence in the current literature for a negatively charged skew~\cite{Sharpe2010, Baeza-Delgado2013, Granseth2005, Pogozheva2013, Nilsson2005a, Andersson1992}.
 
@@ -53,25 +53,58 @@ In order to reliably compare the amino acid sequence properties of \gls{tmh}s, w
 
 The hydrophobic nature of the lipid bilayer membrane implies that, generally, charged residues should be rare within \gls{tmh}s. For acidic residues, even the location in the sequence vicinity of \gls{tmh}s should be disfavoured because of the negatively charged head groups of lipids directed towards the aqueous extracellular side or the cytoplasm. In agreement with the biophysically justified expectations, the statistical data confirms that acidic residues are especially rare in \gls{tmh}s and their flanking regions. In Figure 1 where we plot the total abundance of all amino acid types in single-pass \gls{tmh}s and multi-pass \gls{tmh}s (including their $\pm$5 flanking residues), acidic residues were found to be amongst the rarest amino acids both in UniHuman and ExpAll.
 
-The effect is most pronounced in single-pass \gls{tmp}s (Figure 1A). There are only 666 glutamates (just 1.24\% of all residues) and 560 aspartates (1.05\% respectively) among the total set of 53238 residues comprised in 1705 \gls{tmh}s and their flanks. Within just the \gls{tmh} regions, there are 71 glutamates (0.20\% of all residues in \gls{tmh}s and flanks) and 58 aspartates (0.16\% respectively). This cannot be an artefact of UniProt \gls{tmh} assignments since this feature is repeated in ExpAll. There are only 582 glutamates (1.22\%) and 520 aspartates (1.09\%) among the 47568 residues involved. Within the \gls{tmh} itself, there are 64 glutamates (0.19\%) and 69 aspartates (0.21\%). In both cases, the negatively charged residues represent the ultimate end of the distribution. To note, acidic residues are rare even compared to positively charged residues which are about 3--4 times more frequent. On a much smaller dataset of single-spanning \gls{tmp}, Nakashima et al. (51) made similar compositional studies. To compare, they found 0.94\% glutamate and 0.94\% aspartate within just the \gls{tmh} region (values very similar to ours from \gls{tmh}s with small flanks; apparently, they used more outwardly defined \gls{tmh} boundaries) but the content of each glutamate and aspartate within the extracellular or cytoplasmic domains is larger by an order of magnitude, between 5.26\% and 9.34\%. These latter values tend to be even higher than the average glutamate and aspartate composition throughout the protein database (5--6\%~\cite{Nakashima1992}).
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=1\textwidth]{NNI_chapter/amino_acid_distribution}
+\caption{Negatively charged amino acids are amongst the rarest residues in TMHs and ±5 flanking residues.}
 
-In the case of multi-pass \gls{tmp}s (Figures 1C and 1D), glutamates and aspartates are still very rare in \gls{tmh}s and their $\pm$5 residue flanks (1.94\% and 1.92\% from the total of 377207 in the case of UniHuman respectively, 1.79\% and 1.70\% from the total of 454700 in the case of ExpAll). Yet, their occurrence is similar to those of histidine and tryptophan and, notably, acidic residues are only about $\sim$1.5 times less frequent than positively charged residues. The observation that acidic residues are more suppressed in single-pass \gls{tmh}s compared with the case of multi-pass \gls{tmh}s is statistically significant. In Table 1, the acidic residues are counted in the helices (excluding flanking regions) belonging to either multi-pass or single-pass helices. Indeed, single-pass helices appear to tolerate negative charge to a far lesser extent than multi-pass helices as the data in the top two rows of Table 1 indicates (for datasets UniHuman and ExpAll). The trend is strictly observed throughout subcellular localisations (rows 3--5 in Table 1) and taxa (rows 6--10). Statistical significance (P≤0.001) is found in all but six cases. These are UniEcoli (D+E, D, E), UniArch (D+E, E) and UniFungi (E). The problem is, most likely, that the respective datasets are quite small. Notably, the difference between single- and multi-pass \gls{tmh}s is greatest in UniPM\@; here, \gls{tmh}s from multi-pass proteins have on average 0.400 negative residues per helix, whereas single-pass \gls{tmh}s contained just 0.039 (P\=3.86e-28).
+\medskip
+\small
+Bar charts of the abundance of each amino acid type in the TMHs with flank lengths of the accompanying ±5 residues from the (a) UniHuman single-pass proteins, (b) ExpAll single-pass proteins, (c) UniHuman multi-pass proteins, and (d) ExpAll multi-pass proteins. Amino acid types on the horizontal axis are listed in descending count. The bars were coloured according to categorisations of hydrophobic, neutral and hydrophilic types according to the free energy of insertion biological scale~\cite{Hessa2005}. Grey represents hydrophilic amino acids that were found to have a positive $\Delta$G app, and blue represents hydrophobic residues with a negative $\Delta$G app, purple denotes negative residues and positive residues are coloured in orange. The abundances of key residues are labelled.
+\label{fig:amino_acid_distribution}
+\end{figure}
+
+The effect is most pronounced in single-pass \gls{tmp}s (Figure~\ref{fig:amino_acid_distribution}). There are only 666 glutamates (just 1.24\% of all residues) and 560 aspartates (1.05\% respectively) among the total set of 53238 residues comprised in 1705 \gls{tmh}s and their flanks. Within just the \gls{tmh} regions, there are 71 glutamates (0.20\% of all residues in \gls{tmh}s and flanks) and 58 aspartates (0.16\% respectively). This cannot be an artefact of UniProt \gls{tmh} assignments since this feature is repeated in ExpAll. There are only 582 glutamates (1.22\%) and 520 aspartates (1.09\%) among the 47568 residues involved. Within the \gls{tmh} itself, there are 64 glutamates (0.19\%) and 69 aspartates (0.21\%). In both cases, the negatively charged residues represent the ultimate end of the distribution. To note, acidic residues are rare even compared to positively charged residues which are about 3--4 times more frequent. On a much smaller dataset of single-spanning \gls{tmp}, Nakashima et al. (51) made similar compositional studies. To compare, they found 0.94\% glutamate and 0.94\% aspartate within just the \gls{tmh} region (values very similar to ours from \gls{tmh}s with small flanks; apparently, they used more outwardly defined \gls{tmh} boundaries) but the content of each glutamate and aspartate within the extracellular or cytoplasmic domains is larger by an order of magnitude, between 5.26\% and 9.34\%. These latter values tend to be even higher than the average glutamate and aspartate composition throughout the protein database (5--6\%~\cite{Nakashima1992}).
+
+In the case of multi-pass \gls{tmp}s ( (Figure~\ref{fig:amino_acid_distribution})), glutamates and aspartates are still very rare in \gls{tmh}s and their $\pm$5 residue flanks (1.94\% and 1.92\% from the total of 377207 in the case of UniHuman respectively, 1.79\% and 1.70\% from the total of 454700 in the case of ExpAll). Yet, their occurrence is similar to those of histidine and tryptophan and, notably, acidic residues are only about $\sim$1.5 times less frequent than positively charged residues. The observation that acidic residues are more suppressed in single-pass \gls{tmh}s compared with the case of multi-pass \gls{tmh}s is statistically significant. In Table 1, the acidic residues are counted in the helices (excluding flanking regions) belonging to either multi-pass or single-pass helices. Indeed, single-pass helices appear to tolerate negative charge to a far lesser extent than multi-pass helices as the data in the top two rows of Table 1 indicates (for datasets UniHuman and ExpAll). The trend is strictly observed throughout subcellular localisations (rows 3--5 in Table 1) and taxa (rows 6--10). Statistical significance (P≤0.001) is found in all but six cases. These are UniEcoli (D+E, D, E), UniArch (D+E, E) and UniFungi (E). The problem is, most likely, that the respective datasets are quite small. Notably, the difference between single- and multi-pass \gls{tmh}s is greatest in UniPM\@; here, \gls{tmh}s from multi-pass proteins have on average 0.400 negative residues per helix, whereas single-pass \gls{tmh}s contained just 0.039 (P\=3.86e-28).
 
 \subsection{Amino acid residue distribution analysis reveals a ``negative-not-inside/negative-outside'' signal in single-pass \gls{tmh} segments}
 
-The rarity of negatively charged residues is a complicating issue when studying their distribution along the sequence positions of \gls{tmh}s and their flanks. For UniHuman (Figure 2A) and ExpAll (Figure 2B), we plotted absolute abundance of aspartic acid, glutamic acid, lysine, arginine, and leucine at each position (\textit{i.e.}, it scales as the equivalent fraction in the total composition of the alignment column). To note, the known preference of positively charged residues towards the cytoplasmic side is nevertheless evident. Yet, it becomes apparent that any bias in the occurrence of the much rarer acidic residues is overshadowed by fluctuations in the highly abundant residues such as leucine.
+The rarity of negatively charged residues is a complicating issue when studying their distribution along the sequence positions of \gls{tmh}s and their flanks. For UniHuman and ExpAll , we plotted absolute abundance of aspartic acid, glutamic acid, lysine, arginine, and leucine at each position (\textit{i.e.}, it scales as the equivalent fraction in the total composition of the alignment column) (Figure~\ref{fig:single_pass_charge_distribution}). To note, the known preference of positively charged residues towards the cytoplasmic side is nevertheless evident. Yet, it becomes apparent that any bias in the occurrence of the much rarer acidic residues is overshadowed by fluctuations in the highly abundant residues such as leucine.
 
-The trends become clearer if the occurrence of specific residues is normalised with the total number of residues of the given amino acid type in the dataset observed in the sequence region studied as shown for UniHuman in Figure 2C and for ExpAll in Figure 2D. For comparison, we indicated background residue occurrences (dashed lines calculated as averages for positions -25 to -30 and 25 to 30). The respective average occurrences in the inside and outside flanks (calculated from an average of the values at positions -20 to -10 and 10 to 20 respectively) are shown with wide lines.
+\begin{figure}[!p]
+\centering
+\includegraphics[width=1\textwidth]{NNI_chapter/single_pass_charge_distribution}
+\caption{Relative percentage normalisation reveals a negative-outside bias in TMHs from single-pass protein datasets.}
+
+\medskip
+\small
+All flank sizes were set at up to $\pm$20 residues. We acknowledge that all values, besides the averaged values, are discrete, and connecting lines are illustrative only. On the horizontal axes (a–d) are the distances in residues from the centre of the TMH, with the negative numbers extending towards the cytoplasmic space. For (e) and (f), the horizontal axis represents the residue count from the membrane boundary with negative counts into the cytoplasmic space. Leucine, the most abundant non-polar residue in TMHs, is in blue. Arginine and lysine are shown in dark and light orange respectively. Aspartic and glutamic acid are showing in dark and light purple respectively. (a) and (b) On the vertical axis is the absolute abundance of residues in TMHs from single-pass proteins from (a) UniHuman and (b) ExpAll. Note that no clear trend can be seen in the negative residue distribution compared to the positive-inside signal and the leucine abundance throughout the TMH. c and d On the vertical axis is the relative percentage at each position for TMHs from single-pass proteins from (c) UniHuman and (d) ExpAll. The dashed lines show the estimation of the background level of residues with respect to the colour; an average of the relative percentage values between positions 25 to 30 and –30 to –25. The thick bars show the averages on the inner (positions –20 to –10) and outer (positions 10 to 20) flanks coloured to the respective amino acid type. Note a visible suppression of acidic residues on the inside flank when compared to the outside flank in single-pass proteins when normalising according to the relative percentage. (e) and (f) The relative distribution of flanks defined by the databases with the distance from the TMH boundary on the horizontal axis. The inside and outside flanks are shown in separate subplots. The colouring is the same as in (a) and (b).
+\label{fig:single_pass_charge_distribution}
+\end{figure}
+
+The trends become clearer if the occurrence of specific residues is normalised with the total number of residues of the given amino acid type in the dataset observed in the sequence region studied as shown for UniHuman and for ExpAll in Figure~\ref{fig:single_pass_charge_distribution}. For comparison, we indicated background residue occurrences (dashed lines calculated as averages for positions -25 to -30 and 25 to 30). The respective average occurrences in the inside and outside flanks (calculated from an average of the values at positions -20 to -10 and 10 to 20 respectively) are shown with wide lines.
 
 The “positive-inside rule” becomes even more evident in this normalisation: Whereas the occurrence of positively charged residues is about the background level at the outside flank, it is about two to three times higher both for the UniHuman and the ExpAll datasets at the inside flank. To note, the background level was found to be 1.7\% (lysine) and 1.6\% (arginine) in UniHuman and 1.4\% (lysine and arginine) in ExpAll. The inside flank average is 4.3\% (lysine) and 4.6\% (arginine) in UniHuman and 4.2\% (lysine) and 4.6\% (arginine) in ExpAll. The outside flank is similar to the background noise levels: about 1.4\% (lysine) and 1.5\% (arginine) in UniHuman and about 1.5\% (lysine) and 1.4\% (arginine) in ExpAll.
 
-Most interestingly, a ``negative‑inside depletion'' trend for the negatively charged residues is apparent from the distribution bias. The inside flank averages for glutamic acid were 1.1\% and 1.4\% in UniHuman and ExpAll respectively; for aspartic acid, 1.2\% and 1.4\% in UniHuman and ExpAll respectively. Meanwhile, the outside flanks for aspartic acid and glutamic acid occurrences were measured at 2.9\% and 2.4\% respectively in UniHuman and, in ExpAll, these values for aspartic acid and glutamic acid were found to be 2.5\% and 2.1\% respectively. Against the background level of aspartic acid (2.8\% and 2.9\% in UniHuman) and glutamic acid (2.6\% and 2.9\% in ExpAll), the inside flank averages were found to be about 2--3 times lower than the background level while the outside flank averages were comparable to the background level (Figures 2C and 2D). Taken together, this indicates a clear suppression of negatively charged residues at the inside flank of single-pass \gls{tmh}s and a possible trend for negatively charged residues occurring preferentially at the outside flank. This is not an effect of the flank definition selection since the trend remains the same when using the database-defined flanks without the context of the \gls{tmh} (Figure 2E \& Figure 2F). For UniHuman (Figure 2E), the negative charge expectancy on the inside flank doesn’t reach above 2\% until position -10 (D) and position -11 (E), whereas, on the outside flank, both D and E start > 2\%. The same can be seen in ExpAll (Figure 2F) where negative residues reach above 2\% only as far from the membrane boundary as at position -9 (D) and position -7 (E) on the inside but exceed 2\% beginning with position 1 (D) and 3 (E) on the outside.
+Most interestingly, a ``negative‑inside depletion'' trend for the negatively charged residues is apparent from the distribution bias. The inside flank averages for glutamic acid were 1.1\% and 1.4\% in UniHuman and ExpAll respectively; for aspartic acid, 1.2\% and 1.4\% in UniHuman and ExpAll respectively. Meanwhile, the outside flanks for aspartic acid and glutamic acid occurrences were measured at 2.9\% and 2.4\% respectively in UniHuman and, in ExpAll, these values for aspartic acid and glutamic acid were found to be 2.5\% and 2.1\% respectively. Against the background level of aspartic acid (2.8\% and 2.9\% in UniHuman) and glutamic acid (2.6\% and 2.9\% in ExpAll), the inside flank averages were found to be about 2--3 times lower than the background level while the outside flank averages were comparable to the background level (Figure~\ref{fig:single_pass_charge_distribution}). Taken together, this indicates a clear suppression of negatively charged residues at the inside flank of single-pass \gls{tmh}s and a possible trend for negatively charged residues occurring preferentially at the outside flank. This is not an effect of the flank definition selection since the trend remains the same when using the database-defined flanks without the context of the \gls{tmh} (Figure~\ref{fig:single_pass_charge_distribution}). For UniHuman, the negative charge expectancy on the inside flank doesn’t reach above 2\% until position -10 (D) and position -11 (E), whereas, on the outside flank, both D and E start >2\%. The same can be seen in ExpAll where negative residues reach above 2\% only as far from the membrane boundary as at position -9 (D) and position -7 (E) on the inside but exceed 2\% beginning with position 1 (D) and 3 (E) on the outside (Figure~\ref{fig:single_pass_charge_distribution}).
 
 The observation of negative charge suppression at the inside flank, herein the “negative-inside depletion” rule, is statistically significant throughout most datasets in this study. The inside-outside bias was counted using the \gls{kw} test comparing the occurrence of acidic residues within 10 residues of each \gls{tmh} inside and outside the \gls{tmh} (Table 2). We studied both the database-reported flanks as well as those obtained from central alignment of \gls{tmh}s (see Methods). The null hypothesis (no difference between the two flanks) could be confidently rejected in all cases (P-value<0.001 except for UniBacilli), the sign of the H-statistic (\gls{kw}) indicating suppression at the inside and/or preference for the outside flank (except for UniArch). Most importantly, acidic residues were found to be distributed with bias in ExpAll (P-value <3.47e-58) and in UniHuman (P-value \= 1.13e-93). Whereas with UniBacilli, the problem is most likely the dataset size, the exception of UniArch, for which we observe a strong negative inside rule, is more puzzling and indicates biophysical differences of their plasma-membrane.
 
 \subsection{Amino acid residue distribution analysis reveals a general negative charge bias signal in outside flank of multi-pass \gls{tmh} segments --- the negative outside enrichment rule}
 
-As a result of the rarity of negatively charged residues, any distribution bias is difficult to be recognised in the plot showing the total abundance (or alignment column composition) of residues in multi-pass \gls{tmh}s and their flanks from UniHuman (Figure 3A) and ExpAll (Figure 3B). Yet, as with single-pass helices, the dominant general leucine enrichment, as well as positive inside signal, can be identified with certainty. When the residue occurrence is normalised by the total occurrence of this residue type in the sequence regions studied (shown as a relative percentage of at each position for multi-pass helices from UniHuman in Figure 3C/3E and ExpAll in Figure 3D/3F), the bias in the distribution of any type of charged residues becomes visible.
+As a result of the rarity of negatively charged residues, any distribution bias is difficult to be recognised in the plot showing the total abundance (or alignment column composition) of residues in multi-pass \gls{tmh}s and their flanks from UniHuman and ExpAll (Figure~\ref{fig:multi_pass_charge_distribution}). Yet, as with single-pass helices, the dominant general leucine enrichment, as well as positive inside signal, can be identified with certainty. When the residue occurrence is normalised by the total occurrence of this residue type in the sequence regions studied (shown as a relative percentage of at each position for multi-pass helices from UniHuman and ExpAll  in Figure~\ref{fig:multi_pass_charge_distribution}), the bias in the distribution of any type of charged residues becomes visible.
+
+\begin{figure}[!p]
+\centering
+\includegraphics[width=1\textwidth]{NNI_chapter/multi_pass_charge_distribution}
+\caption{Negative-outside bias is very subtle in TMHs from multi-pass proteins.}
+
+\medskip
+\small
+The meaning for the horizontal axis is the same as in Figure~\ref{fig:single_pass_charge_distribution}, with the negative sequence position numbers extending towards the cytoplasmic space. Leucine is in blue. Arginine and lysine are shown in dark and light orange respectively. Aspartic and glutamic acid are shown in dark and light purple respectively. All flank sizes were set at up to $\pm$20 residues. (a) and (b) On the vertical axes are the absolute abundances of residues from TMHs of multi-pass proteins from (a) UniHuman and (b) ExpAll. c and d On the vertical axes are the relative percentages at each position for TMHs from multi-pass proteins from (c) UniHuman and (d) ExpAll. As in Figure~\ref{single_pass_charge_distribution}(c) and (d), the dashed lines show the estimation of the background level of residues with respect to the colour, and the thick bars show the averages on the inner and outer flanks coloured to the respective amino acid type. e and f The relative distribution of flanks defined by the databases with the distance from the TMH boundary on the horizontal axis for both the inside and outside flanks. The colouring is the same as in (a) and (b).
+\label{fig:multi_pass_charge_distribution}
+\end{figure}
 
 With regard to the positive-inside preference, positively charged residues have a background value of 2.0\% for arginine and 2.2\% for lysine in UniHuman, and 1.7\% for arginine and 1.9\% for lysine in ExpAll. At the inside flank, this rises to 4.6\% for arginine and 4.1\% for lysine in UniHuman and 4.6\% for arginine and 4.2\% for lysine in ExpAll. The mean net charge at each position was calculated for multi-pass and single-pass datasets from UniHuman and ExpAll (Supplementary Figure S1). The positive inside rule clearly becomes visible as the net charge has a positive skew approximately between residues -10 and -25. What is noteworthy is that the peaks found for single-pass helices were almost three times greater than those of multi-pass helices. For single-pass \gls{tmh}s, the peak is +0.30 at position -15 in UniHuman and +0.31 at position -14 in ExpAll, whereas \gls{tmh}s from multi-pass proteins had lower peaks of +0.15 at position -13 in UniHuman and +0.10 at position -14 in ExpAll. Thus, there is a positive charge bias towards the cytoplasmic side; yet, it is much weaker for multi-pass than for single-pass \gls{tmh}s.
 
