Figures added for chapter 2. Legends changed to smaller font (non standard).

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -16,8 +16,12 @@ Measurements of the \gls{tmh} regions have found that they are roughly 20 residu
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=1\textwidth]{Helix_anatomy}
-\caption{A cartoon showing the general components of the membrane and a typical \gls{tmh}. The example used here for illustrative purposes is the trans-membrane region of therein (PDB 2LK9)~\cite{Skasko2012}. Dark grey areas denote the area of lipid head groups. The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane. The helix core is mostly composed of hydrophobic residues. Although the regions labelled here generally hold true in terms of the statistical distribution of polar, non-polar, and charged groups, it is by no means absolute laws and many proteins break these ``rules''~\cite{Sharpe2010, Baeza-Delgado2013, Pogozheva2013}. }
+\includegraphics[width=1\textwidth]{Intro/Helix_anatomy}
+\caption{ A cartoon showing the general components of the membrane and a typical \gls{tmh}.}
+\medskip
+\small
+\justify
+The example used here for illustrative purposes is the trans-membrane region of therein (PDB 2LK9)~\cite{Skasko2012}. Dark grey areas denote the area of lipid head groups. The residues found in these areas are often described as flanking regions and are often in contact with the aqueous interface of the membrane. The helix core is mostly composed of hydrophobic residues. Although the regions labelled here generally hold true in terms of the statistical distribution of polar, non-polar, and charged groups, it is by no means absolute laws and many proteins break these ``rules''~\cite{Sharpe2010, Baeza-Delgado2013, Pogozheva2013}.
 \label{fig:helixcartoon1}
 \end{figure}
 
@@ -73,7 +77,7 @@ This scale is calculated from two other scales; the octanol scale, and the inter
 
 \subsubsection{The Eisenberg Hydrophobic Moment Consensus Scale}
 
-The Eisenberg scale is a consensus scale based on the earlier scales from Tanford~\cite{Nozaki1971}, Wolfenden~\cite{Rose1993}, Chothia~\cite{Chothia1976}, Janin~\cite{Janin1979}, and the von Heijne scale~\cite{VonHeijne1979}. The scales are normalised according to serine~\cite{Eisenberg1984}. The automatic TRANSMEM annotation currently used in Uniprot is according to TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004} and the hydrophobic moment plot method of Eisenberg and coworkers~\cite{Eisenberg1984}.
+The Eisenberg scale is a consensus scale based on the earlier scales from Tanford~\cite{Nozaki1971}, Wolfenden~\cite{Rose1993}, Chothia~\cite{Chothia1976}, Janin~\cite{Janin1979},  Wolfenden~\cite{Wolfenden1981}, and the von Heijne scale~\cite{VonHeijne1979}. The scales are normalised according to serine~\cite{Eisenberg1984}. The automatic TRANSMEM annotation currently used in Uniprot is according to TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004} and the hydrophobic moment plot method of Eisenberg and coworkers~\cite{Eisenberg1984}.
 
 
 
