--- a/thesis.tex
+++ b/thesis.tex
@@ -99,13 +99,11 @@ In this thesis, I make the argument that there are different classifications of 
 
 \prefacesection{Lay Abstract} %The lay abstract section is optional.
 
-The survival of each of our cells relies on a a cellular barrier to separate themselves from the surrounding environment. This cellular skin can be thought of as the bag that contains all the important machinery required for normal cell function. The barrier works by being chemically very different to both the outside environment, and to the inside of the cell, which in both cases are mostly water. The membrane is fatty, and repels water.
+The survival of each of our cells relies on a cellular barrier to separate themselves from the surrounding environment. The barrier is compositionally fatty, and like oil this feature repels water. Because of this, watery environments inside and outside the barrier can include different particles; the machinery of the cell is protected from the outside world.
 
-Proteins are the molecular machinery that power the cells and carry out the functions that keep the . Around a third of our genome codes for protein that are permanently embedded in the membrane.
+In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin. Proteins are the molecular machinery that power the cells and carry out the functions of life. Around a third of our genome codes for protein that are permanently embedded in the membrane and make up an estimated two thirds of drug targets. Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work with in a laboratory setting.
 
-In this thesis, we focus particularly on the parts of the protein that are embedded in the water repelling cellular skin. Traditionally, these regions are hard to study, because we must first remove them from the cellular wall, which causes problems since the embedded regions also repel water and this often causes them to stick to one another, making them hard to work with in a laboratory setting.
-
-In this thesis we analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants. This is especially true for regions that specifically anchor the protein into the cellular wall. Where the embedded regions have additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen.
+Here, we analyse thousands of proteins to further our understanding of electrical charges in the embedded regions and find that negative charge on the outside of the cell has been evolutionarily selected across bacteria, animals, and plants. This is especially true for regions that specifically anchor the protein into the cellular wall. Where the embedded regions have additional function, for example ferrying something in or out of the cell, the negative charge ``bias'' can no longer be seen. This has significance for those scientists that are studying how a particular protein is produced, and will have an impact in designing novel proteins, 
 
 
 
