changed and standardised P value statements.

--- a/chapter_tailanchor.tex
+++ b/chapter_tailanchor.tex
@@ -1,4 +1,4 @@
-\chapter{Tail-Anchored Proteins Revisited; An Up-To-Date Dataset And Biochemical Insights Into Spontaneous Insertion}
+\chapter{Tail-Anchored Protein Datasets}
 \section{Abstract}
 
 \section{Introduction}
@@ -15,7 +15,6 @@ Steps carried out by Kalbfleisch \textit{et al.} published in Traffic 2007 (8: 1
 \subsection{Calculating Hydrophobicity}
 
 \subsection{Calculating Sequence Complexity}
-
 
 \section{Results}
 
